RESOLVED FIXED91062
REGRESSION(r117738): [Forms] stepMismatch for input type "time" with large step value always return false.
https://bugs.webkit.org/show_bug.cgi?id=91062
Summary REGRESSION(r117738): [Forms] stepMismatch for input type "time" with large st...
yosin
Reported 2012-07-12 02:24:24 PDT
Example: <input type=time value="23:59:59.998" step="86399999">
Attachments
Patch 1 (1.80 KB, patch)
2012-07-12 02:45 PDT, yosin
no flags
Patch 2 (1.85 KB, patch)
2012-07-12 20:48 PDT, yosin
no flags
Patch 3 (1.81 KB, patch)
2012-07-12 20:55 PDT, yosin
no flags
Patch 4 (1.81 KB, patch)
2012-07-12 20:58 PDT, yosin
no flags
Patch 5 (1.84 KB, patch)
2012-07-12 22:23 PDT, yosin
no flags
yosin
Comment 1 2012-07-12 02:45:18 PDT
yosin
Comment 2 2012-07-12 02:46:06 PDT
Comment on attachment 151895 [details] Patch 1 Could you review this patch? Thanks in advance.
yosin
Comment 3 2012-07-12 20:48:25 PDT
yosin
Comment 4 2012-07-12 20:55:31 PDT
yosin
Comment 5 2012-07-12 20:58:25 PDT
yosin
Comment 6 2012-07-12 21:00:06 PDT
Comment on attachment 152144 [details] Patch 4 Could you review this patch? Thanks in advance. P.S. I'll file another failure of /fast/forms/time has been caused by Decimal class.
Kent Tamura
Comment 7 2012-07-12 21:02:37 PDT
Comment on attachment 152144 [details] Patch 4 View in context: https://bugs.webkit.org/attachment.cgi?id=152144&action=review > Source/WebCore/ChangeLog:11 > + No new tests, existing test covers (fast/forms/time/) this change although they are listed in TestExpectation file. Please write the test names explicitly. Does this issue affect type=date? If so, adding a test for type=date is helpful.
yosin
Comment 8 2012-07-12 22:18:12 PDT
(In reply to comment #7) > (From update of attachment 152144 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=152144&action=review > > > Source/WebCore/ChangeLog:11 > > + No new tests, existing test covers (fast/forms/time/) this change although they are listed in TestExpectation file. > > Please write the test names explicitly. > > Does this issue affect type=date? If so, adding a test for type=date is helpful. type=date isn't affected by this bug. Because, numeric value of date is always multiply of step scale factor (8640,0000ms).
yosin
Comment 9 2012-07-12 22:23:32 PDT
yosin
Comment 10 2012-07-12 22:27:13 PDT
Comment on attachment 152155 [details] Patch 5 Could you review this patch? Thanks in advance. = Changes since the last review = * Add failed test file name into ChangeLog * No code change.
Kent Tamura
Comment 11 2012-07-12 22:47:54 PDT
Comment on attachment 152155 [details] Patch 5 ok.
yosin
Comment 12 2012-07-12 22:50:01 PDT
Comment on attachment 152155 [details] Patch 5 Clearing flags on attachment: 152155 Committed r122543: <http://trac.webkit.org/changeset/122543>
yosin
Comment 13 2012-07-12 22:50:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.