REGRESSION(r117738): [Forms] stepMismatch for input type "time" with large step value always return false. https://bugs.webkit.org/show_bug.cgi?id=91062

Reviewed by Kent Tamura.

This patch changes value of StepRange::acceptableError to zero for
integer restricted step value.

No new tests, existing test covers (fast/forms/time/ValidityState-stepMismatch-time.html) this change although they are listed in TestExpectation file.

* html/StepRange.cpp:
(WebCore::StepRange::acceptableError): Changed to return 0 if step value is restricted to be an integer.

Canonical link: https://commits.webkit.org/109016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122543 268f45cc-cd09-0410-ab3c-d52691b4dbfc